# zbackup

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTORS  LICENSE  README.md  adler32.hh  appendallocator.cc  appendallocator.hh  backup_collector.cc  backup_collector.hh  backup_creator.cc  backup_creator.hh  backup_exchanger.cc  backup_exchanger.hh  backup_file.cc  backup_file.hh  backup_restorer.cc  backup_restorer.hh  bundle.cc  bundle.hh  buse.c  buse.h  check.hh  chunk_id.cc  chunk_id.hh  chunk_index.cc  chunk_index.hh  chunk_storage.cc  chunk_storage.hh  compression.cc  compression.hh  config.cc  config.hh  debug.cc  debug.hh  dir.cc  dir.hh  encrypted_file.cc  (+51 more)
cmake/: FindLibLZMA.cmake  FindLibLZO.cmake
debian/: README  changelog  control  copyright  rules
docs/: storage-format.md
licenses/: LICENSE
stylesheets/: ownstyle.css
tartool/: CMakeLists.txt  tartool.cc
tests/: TODO.txt
tests/bundle/: bundle.pro  test_bundle.cc
tests/encrypted_file/: encrypted_file.pro  test_encrypted_file.cc
tests/regression/: ByteSource.py  FileByteSource.py  Logger.py  README.md  RandomByteSource.py  RandomBytes.py  ZBackupExecutor.py  regression.py
tests/rolling_hash/: rolling_hash.pro  test_rolling_hash.cc
tools/backupcreator/: CMakeLists.txt  backupcreator.cc  backupcreator.proto
tools/tartool/: CMakeLists.txt  tartool.cc
